packages/beynac/src/test-utils/source/__fixtures__/errors/parent-export.ts
import { BaseClass } from "../../../../utils";

export class ParentExport extends BaseClass {}
